--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,39 @@
 html{
-  background-color: #282c34;
+  background-color: #282c34 !important;
+  color: white !important;
 }
 
 .App {
   
   text-align: center;
+}
+
+.App-header{
+  margin-top: 5vh;
+}
+
+
+
+button{
+  width: 80px !important;
+  max-width: 80px !important;
+  height: 80px;
+  max-height: 80px;
+  font-size: 1em !important;
+}
+
+
+.wrapper{
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-gap: 10px;
+  margin-top: 10px;
+  margin-left: 25%;
+  margin-right: 25% !important;
+}
+
+@media only screen and (max-width: 600px) {
+  .wrapper{
+    margin-left: 10% !important;
+  }
 }
