--- a/src/App.css
+++ b/src/App.css
@@ -1,39 +1,72 @@
-html{
+html {
   background-color: #282c34 !important;
   color: white !important;
 }
 
 .App {
-  
   text-align: center;
 }
 
-.App-header{
+.App-header {
   margin-top: 5vh;
 }
 
+h2 {
+  font-size: 3em;
+}
 
+h3 {
+  font-size: 1.5em;
+}
 
-button{
+.container {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+button {
+  background-color: #1f61e4 !important;
   width: 80px !important;
   max-width: 80px !important;
   height: 80px;
   max-height: 80px;
   font-size: 1em !important;
+  border-radius: 25%;
+  border-color: black;
+  border: none;
+  color: white;
 }
 
+.button:active {
+  background-color: #666c79 !important;
+}
 
-.wrapper{
+.active {
+  background-color: #666c79 !important;
+}
+
+.wrapper {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
   grid-gap: 10px;
   margin-top: 10px;
   margin-left: 25%;
   margin-right: 25% !important;
+  padding: 10px;
+  max-width: 600px;
 }
 
 @media only screen and (max-width: 600px) {
-  .wrapper{
-    margin-left: 10% !important;
+  .wrapper {
+    margin-left: 19% !important;
   }
+}
+
+a {
+  text-decoration: none;
+  color: rgba(104, 159, 248, 0.698);
 }
