FCC's script added. 8/8 Passed!

--- a/src/App.css
+++ b/src/App.css
@@ -29,7 +29,7 @@ h3 {
 }
 
 button {
-  background-color: #1f61e4 !important;
+  background-color: #4578dd !important;
   width: 80px !important;
   max-width: 80px !important;
   height: 80px;
